@@ -1,3 +1,12 @@
 # G9L8 -b open_ie
 
-This branch contains openIE integration. JVM heap has to be at leat 3G to start the server. Use -Xmx3G to allocate memory.
+Relationship extraction using OpenIE.
+
+JVM heap has to be at leat 3G to start the server. Add these memory options -Xmx4G -XX:+UseConcMarkSweepGC when start the server.
+
+Learn more about memory options of OpenIE @ https://github.com/knowitall/openie
+
+# Screenshot
+
+##### Example 1 - Book review analysis
+![Alt text](https://raw.githubusercontent.com/cnsgcu/CS5560-Lab8/open_ie/screenshot/demo.png "Demo")
